2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nndiary.el (nndiary-request-create-group-functions)
	(nndiary-request-update-info-functions)
	(nndiary-request-accept-article-functions):
	* gnus-start.el (gnus-subscribe-newsgroup-functions): Don't use
	"-hooks" suffix.

2012-10-19  Julien Danjou  <julien@danjou.info>

	* gnus-art.el: Require gnus-util because it uses
	`gnus-timer--function'.

2012-10-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>  (tiny change)

	* starttls.el (starttls-extra-arguments): Doc fix.

2012-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): \r is also not inserted, so don't try to delete
	it.

2012-10-06  Glenn Morris  <rgm@gnu.org>

	* gnus-notifications.el (gnus-notifications):
	Add missing group :version tag.
	* gnus-msg.el (gnus-gcc-pre-body-encode-hook)
	(gnus-gcc-post-body-encode-hook):
	* gnus-sync.el (gnus-sync-lesync-name)
	(gnus-sync-lesync-install-topics): Add missing custom :version tags.

2012-10-06  Julian Scheid  <julians37@gmail.com>  (tiny change)

	* color.el (color-hsl-to-rgb): Fix incorrect results for
	small and large hue values.  (Bug#12559)

2012-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	New UIDL implementation.

	* mail-source.el (mail-sources, mail-source-keyword-map):
	Add :leave as a pop3 keyword.
	(mail-source-fetch-pop): Bind pop3-leave-mail-on-server.

	* pop3.el (pop3-leave-mail-on-server): Allow number.
	(pop3-uidl-file, pop3-uidl-file-backup): New user options.
	(pop3-movemail): Add UIDL support.
	(pop3-send-streaming-command): Take a list of mail numbers instead of
	the number of mails.
	(pop3-write-to-file): Add X-UIDL header.
	(pop3-uidl-stat, pop3-uidl-dele, pop3-uidl-load, pop3-uidl-save)
	(pop3-uidl-add-xheader): New functions.

	* message.el (message-ignored-resent-headers):
	Add X-Content-Length and X-UIDL headers.

2012-10-05  Glenn Morris  <rgm@gnu.org>

	* color.el (color-name-to-rgb, color-rgb-to-hex)
	(color-hue-to-rgb, color-hsl-to-rgb, color-rgb-to-hsv)