@@ -1,3 +1,9 @@
+2012-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* dgnushack.el (define-obsolete-variable-alias): Add a compiler-marco
+	and a runtime function for it, of which the XEmacs version takes only
+	two arguments.
+
 2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* nndiary.el (nndiary-request-create-group-functions)
